User create form

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -55,22 +55,22 @@
                             </li>
                             <li><a><i class="fa fa-user"></i> Users <span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
-                                    <li><a href="/users/list">User List</a></li>
-                                    <li><a href="/users/teams">Teams</a></li>
+                                    <li><a href="/admin/users/list">User List</a></li>
+                                    <li><a href="/admin/users/teams">Teams</a></li>
                                 </ul>
                             </li>
 
                             <li><a><i class="fa fa-tasks"></i> Jobs <span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
-                                    <li><a href="/tasks/my-tasks">My Tasks</a></li>
-                                    <li><a href="/tasks/create">Create</a></li>
+                                    <li><a href="/admin/tasks/my-tasks">My Tasks</a></li>
+                                    <li><a href="/admin/tasks/create">Create</a></li>
                                 </ul>
                             </li>
 
                             <li><a><i class="fa fa-calendar"></i> Reports <span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
-                                    <li><a href="/reports/calendar">Calendar</a></li>
-                                    <li><a href="/reports/timesheets">Timesheets</a></li>
+                                    <li><a href="/admin/reports/calendar">Calendar</a></li>
+                                    <li><a href="/admin/reports/timesheets">Timesheets</a></li>
                                 </ul>
                             </li>
                         </ul>
